test on custom cursor - too much issues with iframes

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,7 +36,23 @@ html,body {
     padding: 0;
     margin: 0;
     direction: rtl;
+    /* cursor: none; */
 }
+
+/* .cursor {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: #fff;
+    border-radius: 50%;
+    top: var(--y, 0);
+    left: var(--x, 0);
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    /* INVERTED COLOR 
+    mix-blend-mode: difference;
+    transition: transform .2s;
+  } */
 
 .home-page-wrapper {
     display: flex;
